使用redis缓存用户角色和权限信息。